# doc-procesor

./: .cursorignore  .gitignore  LICENSE  MANIFEST.in  README.md  config.yaml  doc-processor.py  doc_processor.py  logging.yaml  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  setup.py  test_main.py
config/: config.yaml  logging.yaml
doc_processor/: __init__.py
doc_processor/cli/: __init__.py  commands.py
doc_processor/config/: __init__.py  settings.py
doc_processor/core/: __init__.py  exporter.py  processor.py
doc_processor/exceptions/: __init__.py  exceptions.py
doc_processor/extractors/: __init__.py  base.py  batch_extractor.py  table_extractor.py
doc_processor/models/: __init__.py  car_info.py  document_node.py
doc_processor/parsers/: __init__.py  docx_parser.py
doc_processor/utils/: __init__.py  chinese_utils.py  display.py  logging_utils.py  profiling.py  text_utils.py
src/: __init__.py  __main__.py
src/batch/: validator.py
src/cli/: __init__.py  __main__.py  main.py
src/config/: settings.py
src/document/: parser.py
src/models/: car_info.py  document_node.py
src/processor/: doc_processor.py
src/table/: extractor.py
src/ui/: console.py
src/utils/: chinese_numbers.py  text_processing.py  validation.py
tests/: README.md  __init__.py  conftest.py  test_document_parser.py  test_models.py  test_processor.py  test_utils.py
tests/integration/: __init__.py
tests/integration/processing/: __init__.py  test_doc_processing.py  test_processing.py
tests/test_cli/: __init__.py  test_integration.py
tests/test_data/: mock_batch_data.json
tests/unit/: __init__.py  test_main.py
tests/unit/batch/: __init__.py  test_validator.py
tests/unit/cli/: __init__.py  test_cli_main.py  test_main.py
tests/unit/config/: __init__.py  test_config.py  test_settings.py
tests/unit/document/: __init__.py
tests/unit/models/: __init__.py  test_document_node.py
tests/unit/processor/: __init__.py
tests/unit/table/: __init__.py  test_extractor.py
tests/unit/ui/: __init__.py  test_console.py  test_integration.py
tests/unit/utils/: __init__.py  test_chinese_numbers.py  test_utils.py  test_validation.py
tests/utils/: __init__.py  test_helpers.py
