[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-processor"
version = "1.0.0"
description = "处理车辆数据文档的工具"
authors = [
    {name = "iyuangang", email = "yuangang@me.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-docx>=0.8.11",
    "rich>=13.3.5",
    "PyYAML>=6.0",
    "click>=8.1.3",
    "typing-extensions>=4.7.0",
    "tqdm>=4.65.0",
    "mypy-extensions>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
doc-processor = "doc_processor:main"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["doc_processor"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 
